fixed the spacing of the profile picture

--- a/style.css
+++ b/style.css
@@ -7,11 +7,3 @@
       font-family: 'Poppins', sans-serif;
       background-color: #ffffff;
     }
-*{
-    font-family: 'Poppins', sans-serif;
-}
-.section1-text{
-    position: absolute;
-    margin-top: 50px;
-    width: 100px;
-}
